# sotora

./: Cargo.toml
src/: hud_area_label.rs  main.rs
src/battle/: mod.rs
src/dialog/: mod.rs
src/menu/: main_menu.rs  mod.rs  settings.rs
src/overworld/: mod.rs
src/overworld/interactables/: battle_starter.rs  dialog_starter.rs
