[package]
name = "sotora"
version = "0.1.0"
edition = "2018"

[features]
editor = []

[dependencies]
directories = "3.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "3e285d5c0bd49cf1aff11cf3848270bafdd48646"
features = ["serialize"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

